--- a/application/public/css/main.css
+++ b/application/public/css/main.css
@@ -143,7 +143,7 @@ a.nor-red:hover {
 }
 
 .second-nav-bar {
-    z-index:1000;
+    z-index: 900;
     background-color: #eeeeee !important;
 }
 
@@ -159,7 +159,7 @@ a.nor-red:hover {
 }
 
 .third-nav-bar {
-    z-index:1000;
+    z-index: 900;
     background-color: #fff;
 }
 
